2007-03-23  Yves Combe <yves@ycombe.net>

	add python modules in bundle.
	TODO: install_tool_name as to be ru on lib/lib* too.

	* Makefile.am:
	* macosx/build-gtk.sh:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	segfault fixed.

	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	Set GTK to run from bundle. TODO: fix segfault.

	* Makefile.am:
	* configure.in:
	* macosx/pangorc:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-22  Yves Combe <yves@ycombe.net>

	fix and continue osx bundle creation

	* Makefile.am:

2007-03-22  Yves Combe <yves@ycombe.net>

	reloc gtk libs in osx bundle.
	TODO: fix in GNUstep case.

	* Makefile.am:
	* configure.in:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-20  Yves Combe <yves@ycombe.net>

	Small correction

	* macosx/build-gtk.sh:

2007-03-20  Mohammad DAMT  <mdamt@gnome.org>

	* boards/wordsgame/default-id.xml: Indonesian words by Umar Said <umarsaid@gmail.com>

2007-03-20  Yves Combe <yves@ycombe.net>

	Import modified version of inkscape version of imendio script.
	Allow gcompris dependencies build for OSX.

	* macosx/build-gtk.sh:
	* macosx/config.h:
	* macosx/glibconfig.h:

2007-03-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/boardicons/*: moved in boards/skins/gartoon/
	* boards/boardicons/README: updated to reference Mathieu
	* src/boards/menu2.c: (create_panel), (menu_create_item),
	(create_top): updated to use icons from the skin directory
	* src/gcompris/gcompris.c: (main): moved gc_skin_load() down in the
	startup process. The gartoon skin style was never used, even when gartoon
	was selected.

2007-03-19  Bruno coudoin  <bruno.coudoin@free.fr>

	These Images are an original creation of Mathieu Ignacio. Released under GPL.

	boards/boardicons/fun.png
	boards/boardicons/computer.png
	boards/boardicons/experience.png
	boards/boardicons/book.png
	boards/boardicons/math.png
	boards/boardicons/puzzles.png