@@ -1,3 +1,12 @@
+2007-03-24  Yves Combe <yves@ycombe.net>
+
+	continue work on NSBundle.
+
+	* Makefile.am:
+	* macosx/fonts.conf:
+	* macosx/pangorc:
+	* src/gcompris/gcompris-nsbundle.m:
+
 2007-03-23  Yves Combe <yves@ycombe.net>
 
 	add python modules in bundle.
